# cue-openfold-env

./: .gitignore  README.md  activate.sh  bootstrap.sh  postsync.sh  pyproject.toml  smoke_test.sh
tools/: install_msa_binaries.sh
